# ae

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
docs/: ROADMAP.md  SPEC.md
src/: cli.rs  embed.rs  engine.rs  ipc.rs  learn.rs  lib.rs  main.rs  mrl.rs  output.rs  spell.rs  store.rs  trie.rs  types.rs
src/embed/: onnx.rs
tests/: cli_e2e.rs  daemon.rs  embedding.rs
