[package]
name = "ae"
version = "0.2.0"
edition = "2024"
description = "Acronym Engine — real-time acronym expansion and definition extraction."
license = "MIT"

[[bin]]
name = "ae"
path = "src/main.rs"

[lib]
name = "ae"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
ort = { version = "=2.0.0-rc.12", default-features = false }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }

[features]
# Default favors fast iteration: load the model externally from the build-time
# cache (no 22 MB `include_bytes!`) and statically link a downloaded ONNX
# Runtime. Add `--features bundled-model` for the self-contained release artifact.
default = ["ort-download"]

# Bake the embedding model into the binary — one self-contained file, at the cost
# of a bigger artifact and slower link. Opt-in (release/standalone distribution);
# the default loads the model externally from the build-time cache.
bundled-model = []

# ONNX Runtime loading strategy (pick exactly one):
#   ort-download     — download + statically link a prebuilt ORT at build time
#   ort-load-dynamic — dlopen ORT at runtime (ORT_DYLIB_PATH); used by Homebrew,
#                      which links the keg's libonnxruntime instead of fetching
ort-download = [
  "ort/std", "ort/ndarray", "ort/tracing",
  "ort/download-binaries", "ort/tls-native", "ort/copy-dylibs", "ort/api-24",
]
ort-load-dynamic = ["ort/std", "ort/ndarray", "ort/tracing", "ort/load-dynamic", "ort/api-24"]

# Release builds (Homebrew, CI `--release`) optimize for a small single binary:
# strip symbols/debug info and let LTO + one codegen unit drop dead code. The
# bundled model still dominates size, but this trims the code/runtime bloat.
[profile.release]
strip = true
lto = true
codegen-units = 1
