[package]
name = "acronym-engine"
version = "0.4.0"
edition = "2024"
description = "Acronym Engine — acronym expansion and definition extraction."
license = "MIT"
repository = "https://github.com/dpep/ae"

# Published as `acronym-engine`; the binary is `ae`.
[[bin]]
name = "ae"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
ort = { version = "=2.0.0-rc.12", default-features = false }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
# The embedding model is fetched on first use from the HuggingFace Hub into the
# shared cache (~/.cache/huggingface/hub), so it's reused across tools and no
# longer downloaded at build time. `ureq` = the sync client; no tokio. 0.5 is
# the first release that follows the Hub's relative `Location` redirects, which
# 0.3/0.4 mis-parsed (RelativeUrlWithoutBase) when fetching non-LFS files like
# tokenizer.json.
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

[features]
default = ["ort-download"]

# ONNX Runtime loading strategy (pick exactly one):
#   ort-download     — download + statically link a prebuilt ORT at build time
#   ort-load-dynamic — dlopen ORT at runtime (ORT_DYLIB_PATH); used by Homebrew,
#                      which links the keg's libonnxruntime instead of fetching
ort-download = [
  "ort/std", "ort/ndarray", "ort/tracing",
  "ort/download-binaries", "ort/tls-native", "ort/copy-dylibs", "ort/api-24",
]
ort-load-dynamic = ["ort/std", "ort/ndarray", "ort/tracing", "ort/load-dynamic", "ort/api-24"]

# Release builds (Homebrew, CI `--release`) optimize for a small single binary:
# strip symbols/debug info and let LTO + one codegen unit drop dead code.
[profile.release]
strip = true
lto = true
codegen-units = 1
